# unitree_rl

./: State_RL_new.cpp  State_RL_new.h  State_RL_old.cpp  close.sh  final_fix.sh  run.sh  start.sh
devel/: .catkin
devel/lib/depth_process/: depth_process  test_node
devel/lib/pkgconfig/: depth_process.pc  go1_description.pc  move_base_msgs.pc  rl.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_guide.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_motor_ctrl.pc  unitree_move_base.pc
devel/lib/unitree_controller/: unitree_external_force  unitree_move_kinetic  unitree_servo
devel/lib/unitree_guide/: junior_ctrl
devel/lib/unitree_motor_ctrl/: unitree_motor_ctrl_node
devel/share/depth_process/cmake/: depth_processConfig.cmake
devel/share/gennodejs/ros/move_base_msgs/msg/: _index.js
devel/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
devel/share/go1_description/cmake/: go1_descriptionConfig.cmake
devel/share/move_base_msgs/cmake/: move_base_msgs-msg-paths.cmake  move_base_msgsConfig.cmake
devel/share/rl/cmake/: rlConfig.cmake
devel/share/roseus/ros/move_base_msgs/: manifest.l
devel/share/roseus/ros/unitree_legged_msgs/: manifest.l
devel/share/unitree_controller/cmake/: unitree_controllerConfig.cmake
devel/share/unitree_gazebo/cmake/: unitree_gazeboConfig.cmake
devel/share/unitree_guide/cmake/: unitree_guideConfig.cmake
devel/share/unitree_legged_control/cmake/: unitree_legged_controlConfig.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
devel/share/unitree_motor_ctrl/cmake/: unitree_motor_ctrlConfig.cmake
devel/share/unitree_move_base/cmake/: unitree_move_baseConfig.cmake
src/depth_process/: CMakeLists.txt  package.xml
src/depth_process/src/: depth_process.cpp  test.cpp
src/move_base_msgs/: CMakeLists.txt
src/rl/: CMakeLists.txt  README.md  package.xml
src/rl/launch/: rl.launch
src/rl/model/: my_base_jit.pt
src/rl/rsl_rl/rsl_rl/modules/: depth_backbone.py
src/rl/scripts/: action.py  depth_process.py
src/rl/src/rl/: __init__.py  unitree_ros_real.py  utils.py
src/unitree_guide/unitree_guide/: CMakeLists.txt  package.xml
src/unitree_guide/unitree_guide/include/FSM/: FSMState.h  State_RL.h
src/unitree_guide/unitree_guide/include/common/: timeMarker.h
src/unitree_guide/unitree_guide/src/FSM/: State_RL.cpp
src/unitree_ros-master/robots/go1_description/xacro/: robot.xacro
test_torch/: CMakeLists.txt  testlibtorch.cpp  v_test.cpp
